--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,47 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ text-align: center;
+ margin-top: -29px;
+ background-color:rgb(154, 113, 193);
+overflow-x: hidden;
+}
+/* .cards{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:700px;
+  max-width: 1100px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+} */
+
+.container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+ 
 }
 
+/* 
+.App .bucket{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  max-width: 700px;
+  margin: 0 120px;
+} */
+
+
+
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +75,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
